2013-05-09  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: No need to delete C++ libraries.
	* check-results.sh: Better alignment for 6 digit totals.

2013-05-08  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Do not explicitly use --enable-multilib when
	configuring, since it is the default and being explicit triggers
	PR45174.

2013-04-30  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-nsim.exp: Load nsim-extra.exp, initialize
	port with nsim_open.
	* dejagnu/nsim-extra.exp: New file.

2013-04-29  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Fix typo in test of DO_SIM.

2013-04-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Some improvements for Linux 3.8.

2013-04-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-sim.ex: Remove redundant use of
	arc-sim-base.
	* dejagnu/baseboards/arc-nsim.exp: New file.

2013-04-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --sim/--no-sim
	* build-elf32.sh: Optionally build the simulator, depending on
	DO_SIM environment variable.

2013-04-22  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Put log in logs-4.8 directory and rename as
	kernel-build...

2013-04-19  Claudiu Zissulescu <Claudiu.Zissulescu@synopsys.com>

	* build-all.sh: Reorder component dirs, so GCC is last.

2013-04-17  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-uclibc.sh: Delete spurious debugging line.

2013-04-16  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-tests.sh: Add options to select and de-select individual
	tools to test and set corresponding environment variables.
	* run-elf32-tests.sh, run-uclibc-tests.sh: Use environment
	variables to control which tests are run.

2013-04-16  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --isa-v1, --isa-v2 and --config-extra options
	to set ISA_CPU and CONFIG_EXTRA environment variables.